force-app/main/default/objects/Cycle_Date__mdt/Cycle_Date__mdt.object-meta.xml
<CustomObject>
    <description>Used For Configuring Cycle Dates For Repayment Schedule</description>
    <label>Cycle Date</label>
    <pluralLabel>Cycle Date</pluralLabel>
</CustomObject>