force-app/main/default/objects/Cycle_Date__mdt/fields/Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Date__c</fullName>
    <label>Cycle Date</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>