force-app/main/default/objects/Cycle_Date__mdt/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>