force-app/main/default/objects/Cycle_Date__mdt/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>